fix(accordion, combobox, dropdown, tree): remove excessive borders in high contrast mode (#4913)
* fix(accordion): high contrast css update (#4912)
* Remove excessive interal borders by applying outline-none style correctly
* Add interactivy indication since text color can not get slightly darker/lighter

* fix(combobox): high contrast css update (#4912)
* Properly apply the outline-none rule to focus state only
* Replace box-shadow as border with real border in high contrast mode

* fix(dropdown): high contrast css update (#4912)
* properly apply outline-none rule
* use real border rather than box-shadow for outline of dropdown popup

* fix(tree): high contrast css update (#4912)
* properly apply outline-none rule

* fix(combobox): high contrast css popup border (#4912)
* add a real border to combobox popup rather than box-shadow for high contrast

--- a/src/components/accordion-item/accordion-item.scss
+++ b/src/components/accordion-item/accordion-item.scss
@@ -33,8 +33,7 @@
     relative
     flex
     flex-col
-    no-underline
-    outline-none;
+    no-underline;
   background-color: var(--calcite-accordion-item-background, theme("backgroundColor.foreground.1"));
 }
 
@@ -44,7 +43,8 @@
 }
 
 :host(:focus) .accordion-item-header {
-  @apply focus-inset;
+  @apply focus-inset
+  outline-none;
 }
 
 :host([active]),
@@ -166,5 +166,24 @@
   }
   & .accordion-item-description {
     @apply text-color-2;
+  }
+}
+
+@media (forced-colors: active) {
+  :host([expanded]) {
+    & .accordion-item-header {
+      border-bottom: none;
+    }
+    & .accordion-item-heading {
+      /** give visual indicator of expanded state since subtle color changes can't be done **/
+      font-weight: bolder;
+    }
+  }
+  :host(:hover),
+  :host(:focus) {
+    & .accordion-item-heading {
+      /** give visual indicator of expandability/click-ability since subtle color changes can't be done **/
+      text-decoration: underline;
+    }
   }
 }
